--- a/WinSkin/WinSkin.csproj
+++ b/WinSkin/WinSkin.csproj
@@ -11,6 +11,9 @@
     <PackageProjectUrl>https://github.com/CrazyZhang666/WinSkin</PackageProjectUrl>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <AssemblyVersion></AssemblyVersion>
+    <FileVersion></FileVersion>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
